feat:seeder with dummy data